--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="btn_register">REGISTER</string>
     <string name="btn_link_to_register">Not a member? Sign up now.</string>
     <string name="btn_link_to_login">Already registered? Login.</string>
-    <string name="welcome">Welcome</string>
+    <string name="welcome">Are you sure you want to log out?</string>
     <string name="btn_logout">LOGOUT</string>
     <string name="color">Color</string>
 </resources>
